--- a/src/components/Particle/Particle.css
+++ b/src/components/Particle/Particle.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   margin: 0;
   padding: 0;
   border: 0;
@@ -28,7 +28,7 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
+} */
 
 /* particleground demo */
 
@@ -53,9 +53,17 @@ body {
 } */
 
 #particles {
-  width: 100vw;
+  width: 98vw;
   height: 100vh;
   overflow: hidden;
+}
+
+#header {
+  position: absolute;
+  top: 0%;
+  margin: auto;
+  width: 95vw;
+  background: rgba(204, 193, 193, 0);
 }
 
 #intro {
@@ -65,16 +73,16 @@ body {
   padding: 0 10px;
   width: 100%;
   text-align: center;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(204, 193, 193, 0);
 }
-h2 {
+div#intro h2 {
   text-transform: uppercase;
   font-size: 50px;
   font-weight: 120;
-  color: #ffffff;
+  /* color: #ffffff; */
   letter-spacing: 0.05em;
 }
-h1::after {
+div#intro h1::after {
   content: '';
   width: 80px;
   display: block;
