--- a/src/components/ProjectPopup/ProjectPopup.css
+++ b/src/components/ProjectPopup/ProjectPopup.css
@@ -99,3 +99,9 @@
   border-radius: 18px;
   border: 1px solid;
 }
+
+.project_full_description {
+  font-size: 16px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
